[project]
name = "blograg"
version = "0.1.0"
description = ""
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "docling (>=2.37.0,<3.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "sqlalchemy[postgresql-psycopg] (>=2.0.41,<3.0.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "unstructured[md] (>=0.18.3,<0.19.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"
mypy = "1.16.1"
pre-commit = "4.2.0"
tox = "4.28.4"
pytest-sugar = "1.0.0"
pytest-randomly = "3.16.0"
ruff = "0.12.10"
types-peewee = "^3.18.1.20250516"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.dependencies]
torch = { source = "torch-cpu" }
torchvision = { source = "torch-cpu" }
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
env = ["FORCE_COLOR=1"]
addopts = [
    "--cov=blograg",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
    "--verbose",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]


[tool.mypy]
files = ["blograg"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pgvector"]
follow_untyped_imports = true

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true
